--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -215,6 +215,84 @@
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
                             android:padding="5dp"
+                            android:text="@string/education"
+                            android:textColor="@color/orange"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tvEducation"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:padding="5dp"
+                            android:text="--"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:padding="5dp"
+                            android:text="@string/schoolname"
+                            android:textColor="@color/orange"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tvSchoolName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:padding="5dp"
+                            android:text="---"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:padding="5dp"
+                            android:text="@string/designation"
+                            android:textColor="@color/orange"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tvDesignaion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:padding="5dp"
+                            android:text="---"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:padding="5dp"
                             android:text="@string/location"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
@@ -228,6 +306,7 @@
                             android:text="Thane,Shahapur"
                             android:textSize="20sp" />
                     </LinearLayout>
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
