--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -12,39 +12,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
+        android:scrollbars="vertical"
         android:orientation="vertical">
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:fontFamily="@font/nunitobold"
             android:gravity="center"
+            android:layout_margin="20dp"
             android:text="@string/photo_for_id_card"
             android:textColor="#f4641d"
-            android:textSize="35sp" />
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivPhoto"
-            android:layout_width="350dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            android:contentDescription="TODO"
-            android:src="@drawable/ic_profile"
-            app:civ_border_color="#3e3e3e"
-            app:civ_border_width="1dp" />
+            android:textSize="30sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ivPhoto"
+                android:layout_width="300dp"
+                android:layout_height="250dp"
+                android:contentDescription="Profile Photo"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_profile"
+                app:civ_border_color="#3e3e3e"
+                app:civ_border_width="1dp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center"
@@ -113,8 +120,8 @@
                     android:textSize="20sp" />
 
             </LinearLayout>
-        </LinearLayout>
 
+        </LinearLayout>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnNext"
             android:layout_width="wrap_content"
@@ -126,7 +133,7 @@
             android:text="@string/next"
             android:textColor="#fff"
             android:textSize="30sp" />
-    </LinearLayout>
 
+    </LinearLayout>
 
 </LinearLayout>
