--- a/app/src/main/res/layout/profiledetails_activity.xml
+++ b/app/src/main/res/layout/profiledetails_activity.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:keepScreenOn="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbars="vertical">
 
 
     <include
@@ -18,7 +19,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical">
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -180,13 +180,22 @@
                 android:id="@+id/etDOB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints=""
                 android:background="@drawable/shapeform"
                 android:fontFamily="@font/nunitolight"
                 android:hint="Please Enter Date Of Birth"
                 android:inputType="date"
-                android:textSize="20sp"
-                />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            app:hintTextAppearance="@style/CustomTextAppearance" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnNext"
